--- a/btn.css
+++ b/btn.css
@@ -51,7 +51,7 @@ font-weight: 500;
 font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .one{
-    box-shadow: 5px 5px rgb(64, 59, 59);
+    box-shadow: 5px 5px 3px rgb(64, 59, 59);
 }
 .section .one::before{
     content: "";
@@ -108,7 +108,7 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, O
     top:0px;
 }
 .four{
-    box-shadow: 5px 5px rgb(64, 59, 59);
+    box-shadow: 5px 5px  3px rgb(64, 59, 59);
 }
 .four::before{
      content: "";
@@ -128,8 +128,11 @@ font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, O
 .four:hover::before{
     transform: scale(4);
 }
+.two{
+    box-shadow: 5px 5px 3px rgb(64, 59, 59);
+}
 .three{
-    box-shadow: 5px 5px rgb(64, 59, 59);
+    box-shadow: 5px 5px 3px rgb(64, 59, 59);
 }
 .three::before {
     content: "";
